# yaabe

./: .clangd  .gitmodules  AMD.MIT_LICENCE  Makefile  README.md  THIRD_PARTY_LICENSE  cereal.json5  cereal_enum.json5  main.c  meson.build  meson.options  npt_ints.h  nsis_helper.py  ppatui.py  qnotation.h  semver.h  standard.c  standard.h  test.c  yaabe.nsi  yaabewindows.rc  yaabewindows.rc.in
.github/workflows/: msys2_yaabe_release.yml
amd/: atombios.h  atomfirmware.h  ddrmoderegisters.h  powerplay.h  smu11_driver_if.h  smu_v11_0_pptable.h  umctimings.h
amd/inc/: smu11_driver_if.h
asic_reg/: asic_reg.py
atom/: amd_pci_ids.json5  asic_reg_data_tables.h  asic_reg_indices.h  asic_reg_indices.json5  atombios.h  atomfirmware.h  bios_headers.h  bitfield_overrides.h  bootstraps.h  dcn.h  ddrmoderegisters.h  discovery.h  gmc.h  gmc_searchfield.h  meson.build  pci.h  powerplay.h  powerplay_smu.h  pplib.h  pptable.h  pptable_v1_0.h  pptable_vega10.h  psp.h  psp_directory.h  smu11_driver_if.h  smu11_driver_if_sienna_cichlid.h  smu13_driver_if_v13_0_7.h  smu_driver_if.h  smu_v11_0_7_pptable.h  smu_v11_0_pptable.h  smu_v13_0_7_pptable.h  umctimings.h  vega10_pptable.h
atomtree/: .atomtree_data_tables.h.swp  amd_pci_ids.json5  asic_reg_indices.c  asic_reg_indices.h  asic_reg_indices.json5  asic_reg_tools.c  asic_reg_tools.h  atomtree.c  atomtree.h  atomtree_common.h  atomtree_data_tables.h  atomtree_internal.c  atomtree_internal.h  atomtree_tools.h  atui.c  atui.h  atui_atombios.c  atui_atombios.json5  atui_atomfirmware.c  atui_atomfirmware.json5  atui_branch_allocator.c  atui_ddrmoderegisters.c  atui_ddrmoderegisters.json5  atui_documentation.md  atui_enums.h  atui_enums.h-old  atui_enums.json5  atui_gmc.c  atui_gmc.h  atui_gmc.json5  atui_includes.h  atui_includes.h-old  atui_powerplay.c  atui_powerplay.json5  atui_smu_v11_pptable.c  atui_smu_v11_pptable.json5  atui_smu_v13_pptable.c  atui_smu_v13_pptable.json5  atui_tree.c  atui_umctimings.c  (+9 more)
atomtree/atui/: atui.c  atui.h  atui_allocator.h  atui_types.h  auto_includes.h  branch_allocator.c  meson.build  ppatui.h  tree.c
atomtree/atui/tables/: README.md  atui_asic_reg_data_tables.json5  atui_atombios.json5  atui_atomfirmware.json5  atui_bitfield_overrides.json5  atui_bootstraps.json5  atui_dcn.json5  atui_ddrmoderegisters.json5  atui_discovery.json5  atui_enums.json5  atui_gc.json5  atui_gmc.json5  atui_pci.json5  atui_powerplay.json5  atui_pplib.json5  atui_pptable.json5  atui_pptable_v1_0.json5  atui_pptable_vega10.json5  atui_psp.json5  atui_smu_v11_pptable.json5  atui_smu_v13_pptable.json5  atui_smu_v9_pptable.json5  meson.build
atomtree/atui_tables/: atui_asic_reg_data_tables.json5  atui_atombios.json5  atui_atomfirmware.json5  atui_bitfield_overrides.json5  atui_ddrmoderegisters.json5  atui_documentation.md  atui_enums.json5  atui_gc.json5  atui_powerplay.json5  atui_smu_v11_pptable.json5  atui_smu_v13_pptable.json5  atui_umctimings.json5  meson.build
gatui/: gatui.c  gatui.h  gatui_branch.c  gatui_branch.h  gatui_leaf.c  gatui_leaf.h  gatui_node.c  gatui_node.h  gatui_private.c  gatui_private.h  gatui_regex.c  gatui_regex.h  gatui_tree.c  gatui_tree.h  meson.build
gmc/: gmc.py  gmc_6_0_out.h  gmc_6_0_sh_mask.h
gtk/: config_options.c  menu_bars.c  meson.build  panes.c  rightclick.c  search.c  yaabe.conf  yaabe_gtk4.c  yaabe_gtk4.h  yaabe_gtk_internal.h
gtk-assets/etc/gtk-4.0/: settings.ini
scripts/: atui_tools.py  nsis_helper.py  ppatui.py
scripts/asic_reg/: asic_reg.py
sratch/: README.md  a.out  array.c  crc.c  cu16.c  element.c  funcptr.c  gtk.c  gtk2.c  gtk3.c  gtk4.c  gtk5.c  index.c  pptest.c  preprocess.c  spookymacro.c  string.c  union.c
